--- a/headwolf/app/src/main/assets/config
+++ b/headwolf/app/src/main/assets/config
@@ -1,6 +1,4 @@
 remote_server=192.144.152.23
-wechat_remote_server=182.92.212.44
-group_kuaishou_name=ks_group2
-group_taobao_name=tb_group2
-group_douyin_name=dy_group2
-group_wechat_name=wc_group2
+package_name=com.lateautumn4lin.headwolf
+package_kuaishou=com.smile.gifmaker
+package_pdd=com.xunmeng.pinduoduo
